# isic2024-scd

./: .pre-commit-config.yaml  Makefile  README.md  isic-cnn-psuedo-train-predict.py  isic-scd-dnn-paucloss-train.ipynb  isic_boosting_predict.py  isic_cnn_binary_predict.py  isic_cnn_multi_predict.py  isic_helper.py  isic_multi_predict.py  pyproject.toml
notebooks/: isic-finetune.ipynb  isic-scd-boosting-v1-infer.ipynb  isic-scd-boosting-v1-train.ipynb  isic-scd-cb-infer.ipynb  isic-scd-cb-train.ipynb  isic-scd-cb-v1-infer.ipynb  isic-scd-cb-v1-train.ipynb  isic-scd-cb-v2-train.ipynb  isic-scd-dnn-infer.ipynb  isic-scd-dnn-paucloss-train.ipynb  isic-scd-dnn-train.ipynb  isic-scd-ensemble-eval.ipynb  isic-scd-ensemble-infer.ipynb  isic-scd-ext-data.ipynb  isic-scd-folds.ipynb  isic-scd-lgb-infer.ipynb  isic-scd-lgb-train.ipynb  isic-scd-lgb-v1-train.ipynb  isic-scd-lgb-v2-train.ipynb  isic-scd-lgb-v3-infer.ipynb  isic-scd-lgb-v3-train.ipynb  isic-scd-lgb-v4-train.ipynb  isic-scd-lgb-v5-train.ipynb  isic-scd-lgb-v6-train.ipynb  isic-scd-resnet18-infer.ipynb  isic-scd-resnet18-train.ipynb  isic-scd-xgb-v1-train.ipynb  isic-scd-xgb-v2-train.ipynb  isic-scd-xgb-v3-train.ipynb  isic-scd-xgb-v4-train.ipynb  isic-scd-xgb-v5-train.ipynb  isic2024-scd-boosting-train.ipynb
src/: dataset.py  engine.py  evaluate.py  isic-scd-resnet18-v1-train.py  isic2024_scd_app.py  models.py  pretrain.py  run.sh  train.py  train_isic2024_scd.py  utils.py
src/finetune/: dataset.py  engine.py  models.py  run.py
src/pretrain/: dataset.py  engine.py  medmamba.py  models.py  run.py  utils.py
(+19 files in other folders)
